# fastapi-accelerator

./: .gitignore  404.html  LICENSE  Makefile  README.md  article.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
about/: index.html
business_logic/: index.html
code_docs/: index.html
docs/: mkdocs.yml
docs/docs/: about.md  business_logic.en.md  business_logic.md  code_docs.md  index.en.md  index.md  info_files.en.md  info_files.md  plan.en.md  plan.md  test_logic.en.md  test_logic.md
en/: index.html
en/about/: index.html
en/business_logic/: index.html
en/code_docs/: index.html
en/info_files/: index.html
en/plan/: index.html
en/test_logic/: index.html
fastapi-accelerator/: README.md  exception.py  utils.py  viewset.py
fastapi-accelerator/db/: __init__.py  dbsession.py
fastapi-accelerator/pattern/: pattern_alembic.py  pattern_fastapi.py  pattern_flask_admin.py
fastapi-accelerator/testutils/: fixture_auth.py  fixture_base.py  utils.py
fastapi-accelerator/testutils/fixture_db/: __init__.py  apply_fixture.py  db.py  trace_sql.py
fastapi_accelerator/: __init__.py  appstate.py  auth_jwt.py  cache.py  exception.py  middleware.py  paginator.py  timezone.py  utils.py  viewset.py
fastapi_accelerator/commands/: __init__.py  py2dantic.py
fastapi_accelerator/commands/tests/: test_py2dantic.py
fastapi_accelerator/db/: dborm.py  dbsession.py
fastapi_accelerator/integration/: __init__.py  base_integration.py  http_integration.py  stability_patterns.py
fastapi_accelerator/pattern/: __init__.py  pattern_alembic.py  pattern_fastapi.py  pattern_flask_admin.py
fastapi_accelerator/templates/: docintegration.html
fastapi_accelerator/testutils/: __init__.py  fixture_auth.py  fixture_base.py  fixture_integration.py  utils.py
fastapi_accelerator/testutils/fixture_db/: apply_fixture.py  db.py  trace_sql.py
info_files/: index.html
plan/: index.html
search/: search_index.json
test_logic/: index.html
