[tool.poetry]
name = "fastapi-accelerator"
version = "0.1.0"
description = ""
authors = ["Denis Kustov pro-progerkustov@yandex.ru"]
readme = "fastapi-accelerator/README.md"
license = "Apache-2.0"
homepage = "https://github.com/______"
repository = "https://github.com/______"
keywords = ["fastapi", "Django"]
exclude = [
    "fastapi-accelerator/.idea",
    "fastapi-accelerator/venv",
    "fastapi-accelerator/.git",
    "fastapi-accelerator/.gitignore",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
redis = {extras = ["asyncio"], version = "^5.0.8"}
pytz = "^2024.1"
alembic = "^1.13.2"
flask-admin = "^1.6.1"
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"
sqlalchemy-utils = "^0.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
